--- a/note.html
+++ b/note.html
@@ -60,9 +60,9 @@
     <textarea id="textArea" placeholder="Enter Text"></textarea>
     <button id="saveButton">Save</button>
 </div>
+<!-- Status bar for character count and cursor position -->
 
-<script src="note.js">
-</script>
+<script src="note.js"></script>
 
 </body>
 </html>
